<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
     <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.justjava.MainActivity">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/name"
             android:inputType="textCapWords"
             android:hint="@string/Name"
             android:layout_marginBottom="8dp"/>

         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppings"
                android:layout_below="@+id/name"
                android:paddingBottom="16dp"
                android:textAllCaps="true"
                android:id="@+id/topping"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WhippedCream"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:id="@+id/whipped"
                android:layout_below="@+id/topping" />
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Chocolate"
             android:paddingLeft="24dp"
             android:textSize="16sp"
             android:id="@+id/chocolate"
             android:layout_below="@+id/whipped" />

            <TextView
                android:text="@string/Quantity"
                android:textAllCaps="true"
                android:id="@+id/quantity_text_view"
                android:layout_below="@id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingTop="16sp"
                android:paddingBottom="8sp"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/button1"
            android:text="+"
            android:layout_marginLeft="4sp"
            android:layout_below="@id/quantity_text_view"
            android:layout_toRightOf="@+id/number"
            android:onClick="submit1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 0"
                android:id="@id/number"
                android:layout_below="@id/quantity_text_view"
                android:layout_toRightOf="@+id/button2"
                android:textSize="16sp"
                android:layout_marginTop="8sp"
                android:paddingTop="8sp"
                android:textColor="#000"/>
        <Button
            android:id="@id/button2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:layout_below="@+id/quantity_text_view"
            android:onClick="submit2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Order"
                android:layout_below="@+id/button2"
                android:layout_marginTop="16sp"
                android:onClick="submitOrder"/>

    </RelativeLayout>
</ScrollView>


